Fixing top justified sub-menu items on small screen sizes

--- a/themes/shell/styles/regions/_sidebar.scss
+++ b/themes/shell/styles/regions/_sidebar.scss
@@ -94,6 +94,7 @@
 
         &.expanded{
           right: 0;
+          justify-content: center;
           transition: $in-transition;
 
           .back{
